# qwc-test

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  version.cmake
src/BinaryInfo/: cryptotest.rc  daemon.rc  miner.rc  service.rc  simplewallet.rc  walletapi.rc  zedwallet.rc
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerData.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h  IBlockchainExplorer.h  IBlockchainObserver.h
src/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.h  CheckDifficulty.cpp  CheckDifficulty.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  CryptoNoteTools.cpp  CryptoNoteTools.h  DnsTools.cpp  FileMappedVector.h  IInputStream.h  IIntUtil.h  IOutputStream.h  JsonValue.cpp  JsonValue.h  Lazy.h  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  StreamTools.h  StringBuffer.h  StringInputStream.cpp  StringInputStream.h  (+13 more)
src/Crypto/: Aesb.c  Blake256.c  Blake256.h  Chacha8.cpp  Chacha8.h  Crypto.cpp  Crypto.h  CryptoOps.c  CryptoOps.h  CryptoOpsData.c  Groestl.c  Groestl.h  GroestlTables.h  Hash.c  Hash.h  HashExtraBlake.c  HashExtraGroestl.c  HashExtraJh.c  HashExtraSkein.c  HashOps.h  Jh.c  Jh.h  Keccak.c  Keccak.h  OAesLib.c  OAesLib.h  Random.h  Skein.c  Skein.h  SkeinPort.h  SlowHashArm.c  SlowHashCommon.h  SlowHashPortable.c  SlowHashx86.c  TreeHash.c  Variant2IntSqrt.h  blake256.c  chacha8.h  crypto-ops.c  crypto.cpp  (+9 more)
src/CryptoNoteCore/: Account.cpp  Account.h  AddBlockErrorCondition.cpp  AddBlockErrorCondition.h  AddBlockErrors.cpp  AddBlockErrors.h  BlockValidationErrors.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreErrors.cpp  CoreErrors.h  CoreStatistics.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  Currency.cpp  Currency.h  Difficulty.cpp  Difficulty.h  ICore.h  ICoreDefinitions.h  ICoreInformation.h  ICoreObserver.h  IKeyValueStorage.h  IMinerHandler.h  ITimeProvider.h  IUpgradeDetector.h  IUpgradeManager.h  IntrusiveLinkedList.h  MessageQueue.h  Mixins.h  SwappedVector.h  UpgradeDetector.cpp  UpgradeDetector.h  UpgradeManager.cpp  (+1 more)
src/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
src/CryptoTest/: main.cpp
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h  DaemonConfiguration.cpp  DaemonConfiguration.h
src/Errors/: Errors.cpp  Errors.h
src/Global/: Checkpoints.h  CliHeader.h  Config.cpp  Config.h  Constants.h  CryptoNoteConfig.h  LMDBConfig.h  version.h.in
src/Http/: HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Logger/: Logger.h
src/Logging/: CommonLogger.cpp  ConsoleLogger.cpp  DummyLogger.h  ILogger.cpp  ILogger.h  Logger.cpp  Logger.h  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  LoggerMessage.h  LoggerRef.h  StreamLogger.cpp  StreamLogger.h
src/Miner/: BlockUtilities.cpp  BlockUtilities.h  BlockchainMonitor.cpp  BlockchainMonitor.h  Miner.cpp  Miner.h  MinerEvent.h  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  main.cpp
src/Mnemonics/: CRC32.h  LanguageBase.h  Mnemonics.cpp  Mnemonics.h  WordList.h  chineseSimpl.h  dutch.h  english.h  french.h  german.h  italian.h  japanese.h  polish.h  portugese.h  russian.h  spanish.h  ukrainian.h
src/Nigel/: Nigel.cpp
src/NodeRpcProxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
src/P2p/: ConnectionContext.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeConfig.cpp  NetNodeConfig.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pContextOwner.cpp  P2pContextOwner.h  P2pInterfaces.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pProtocolDefinitions.h  PeerListManager.h  Peerlist.cpp
src/Rpc/: CoreRpcServerCommandsDefinitions.h  CoreRpcServerErrorCodes.h  HttpClient.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h
src/Serialization/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BinarySerializationTools.h  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  ISerializer.h  JsonInputStreamSerializer.cpp  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryCommon.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  MemoryStream.h  SerializationOverloads.cpp  SerializationOverloads.h  SerializationTools.h
src/SimpleWallet/: Commands.cpp  Commands.h  Fusion.cpp  Fusion.h  Open.cpp  Open.h  ParseArguments.cpp  ParseArguments.h  PasswordContainer.cpp  PasswordContainer.h  SimpleWallet.cpp  SimpleWallet.h  Sync.cpp  Sync.h  Tools.cpp  Tools.h  Transfer.cpp  Transfer.h
src/SubWallets/: SubWallet.cpp  SubWallet.h  SubWallets.cpp  SubWallets.h
src/System/: Context.h  ContextGroup.cpp  ContextGroup.h  ContextGroupTimeout.cpp  ContextGroupTimeout.h  Event.cpp  EventLock.cpp  EventLock.h  RemoteContext.h  RemoteEventLock.cpp
src/Transfers/: BlockchainSynchronizer.cpp  BlockchainSynchronizer.h  CommonTypes.h  IBlockchainSynchronizer.h  IObservableImpl.h  SynchronizationState.cpp  SynchronizationState.h  TransfersConsumer.cpp  TransfersConsumer.h  TransfersContainer.cpp  TransfersContainer.h  (+5 more)
(+810 files in other folders)
